--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,16 @@ p {
   color: #acacac
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
+
 .bg-dark-gray {
   background-color: #313131;
 }
